# docker_with_poetry

./: Dockerfile  Dockerfile_with_if  README.md  pyproject.toml
